readable: fix panel border, uses class color now, closes #397

--- a/readable/_bootswatch.scss
+++ b/readable/_bootswatch.scss
@@ -165,22 +165,6 @@ legend {
       color: $text-color;
     }
   }
-
-  &-primary,
-  &-success,
-  &-warning,
-  &-danger,
-  &-info {
-    .panel-heading {
-      color: #fff;
-    }
-
-    .panel-body {
-      border: 1px solid #ddd;
-      border-top-width: 0;
-      border-radius: 0 0 $border-radius-base $border-radius-base;
-    }
-  }
 }
 
 .modal {
