--- a/readable/bootstrap.css
+++ b/readable/bootstrap.css
@@ -5534,94 +5534,94 @@ a.list-group-item-danger.active:focus {
   border-bottom-color: #dddddd;
 }
 .panel-primary {
-  border-color: transparent;
+  border-color: #4582ec;
 }
 .panel-primary > .panel-heading {
   color: #ffffff;
   background-color: #4582ec;
-  border-color: transparent;
+  border-color: #4582ec;
 }
 .panel-primary > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: transparent;
+  border-top-color: #4582ec;
 }
 .panel-primary > .panel-heading .badge {
   color: #4582ec;
   background-color: #ffffff;
 }
 .panel-primary > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: transparent;
+  border-bottom-color: #4582ec;
 }
 .panel-success {
-  border-color: transparent;
+  border-color: #3fad46;
 }
 .panel-success > .panel-heading {
-  color: #3fad46;
+  color: #ffffff;
   background-color: #3fad46;
-  border-color: transparent;
+  border-color: #3fad46;
 }
 .panel-success > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: transparent;
+  border-top-color: #3fad46;
 }
 .panel-success > .panel-heading .badge {
   color: #3fad46;
-  background-color: #3fad46;
+  background-color: #ffffff;
 }
 .panel-success > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: transparent;
+  border-bottom-color: #3fad46;
 }
 .panel-info {
-  border-color: transparent;
+  border-color: #5bc0de;
 }
 .panel-info > .panel-heading {
-  color: #5bc0de;
+  color: #ffffff;
   background-color: #5bc0de;
-  border-color: transparent;
+  border-color: #5bc0de;
 }
 .panel-info > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: transparent;
+  border-top-color: #5bc0de;
 }
 .panel-info > .panel-heading .badge {
   color: #5bc0de;
-  background-color: #5bc0de;
+  background-color: #ffffff;
 }
 .panel-info > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: transparent;
+  border-bottom-color: #5bc0de;
 }
 .panel-warning {
-  border-color: transparent;
+  border-color: #f0ad4e;
 }
 .panel-warning > .panel-heading {
-  color: #f0ad4e;
+  color: #ffffff;
   background-color: #f0ad4e;
-  border-color: transparent;
+  border-color: #f0ad4e;
 }
 .panel-warning > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: transparent;
+  border-top-color: #f0ad4e;
 }
 .panel-warning > .panel-heading .badge {
   color: #f0ad4e;
-  background-color: #f0ad4e;
+  background-color: #ffffff;
 }
 .panel-warning > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: transparent;
+  border-bottom-color: #f0ad4e;
 }
 .panel-danger {
-  border-color: transparent;
+  border-color: #d9534f;
 }
 .panel-danger > .panel-heading {
-  color: #d9534f;
+  color: #ffffff;
   background-color: #d9534f;
-  border-color: transparent;
+  border-color: #d9534f;
 }
 .panel-danger > .panel-heading + .panel-collapse > .panel-body {
-  border-top-color: transparent;
+  border-top-color: #d9534f;
 }
 .panel-danger > .panel-heading .badge {
   color: #d9534f;
-  background-color: #d9534f;
+  background-color: #ffffff;
 }
 .panel-danger > .panel-footer + .panel-collapse > .panel-body {
-  border-bottom-color: transparent;
+  border-bottom-color: #d9534f;
 }
 .embed-responsive {
   position: relative;
@@ -6666,22 +6666,6 @@ legend {
 }
 .panel-default .close {
   color: #333333;
-}
-.panel-primary .panel-heading,
-.panel-success .panel-heading,
-.panel-warning .panel-heading,
-.panel-danger .panel-heading,
-.panel-info .panel-heading {
-  color: #fff;
-}
-.panel-primary .panel-body,
-.panel-success .panel-body,
-.panel-warning .panel-body,
-.panel-danger .panel-body,
-.panel-info .panel-body {
-  border: 1px solid #ddd;
-  border-top-width: 0;
-  border-radius: 0 0 4px 4px;
 }
 .modal .close {
   color: #333333;
