--- a/readable/variables.less
+++ b/readable/variables.less
@@ -707,23 +707,23 @@
 @panel-default-heading-bg:    #f5f5f5;
 
 @panel-primary-text:          #fff;
-@panel-primary-border:        transparent;
+@panel-primary-border:        @brand-primary;
 @panel-primary-heading-bg:    @brand-primary;
 
-@panel-success-text:          @state-success-text;
-@panel-success-border:        transparent;
+@panel-success-text:          #fff;
+@panel-success-border:        @state-success-border;
 @panel-success-heading-bg:    @state-success-border;
 
-@panel-info-text:             @state-info-text;
-@panel-info-border:           transparent;
+@panel-info-text:             #fff;
+@panel-info-border:           @state-info-border;
 @panel-info-heading-bg:       @state-info-border;
 
-@panel-warning-text:          @state-warning-text;
-@panel-warning-border:        transparent;
+@panel-warning-text:          #fff;
+@panel-warning-border:        @state-warning-border;
 @panel-warning-heading-bg:    @state-warning-border;
 
-@panel-danger-text:           @state-danger-text;
-@panel-danger-border:         transparent;
+@panel-danger-text:           #fff;
+@panel-danger-border:         @state-danger-border;
 @panel-danger-heading-bg:     @state-danger-border;
 
 
